# TubeMoped

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/: BiquadFilterDF2.h  ClippingStageProcessor.h  Editor.h  MainComponent.h  Processor.h  ToneStageProcessor.h
source/: Editor.cpp  MainComponent.cpp  Processor.cpp
